Fixed the broken CSS on the parts page
The href link was wrong.

--- a/src/main/resources/static/partStyle.css
+++ b/src/main/resources/static/partStyle.css
@@ -4,7 +4,6 @@ body {
 }
 
 .header-container {
-    display: flex;
     align-items: center;
     padding: 10px 20px;
 }
